fix; z-index for mascot should change in highest point of animation

--- a/src/components/Person/Person.module.css
+++ b/src/components/Person/Person.module.css
@@ -67,9 +67,13 @@
         transform: rotate(0deg) translateY(0);
         z-index: 1;
     }
-    50% {
-        transform: rotate(0deg) translateY(-75%);
+    49% {
+        transform: rotate(0deg) translateY(-70%);
         z-index: 1;
+    }
+    50% {
+        transform: rotate(0deg) translateY(-70%);
+        z-index: 3;
     }
     100% {
         @mixin mascot-anim 0;
